tmux: add pspane and bind it to ctrlb-`

--- a/local/tmux.conf
+++ b/local/tmux.conf
@@ -14,8 +14,8 @@ set-option -ga terminal-overrides ",rxvt-unicode-256color:Tc"
 set -g update-environment "DISPLAY XAUTHORITY SSH_AUTH_SOCK"
 set -g window-size smallest
 
-set -g @resurrect-capture-pane-contents 'on'
-run-shell ~/.files/tmux/tmux-resurrect/resurrect.tmux
+#set -g @resurrect-capture-pane-contents 'on'
+#run-shell ~/.files/tmux/tmux-resurrect/resurrect.tmux
 
 unbind-key MouseDown2Pane
 bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
@@ -27,7 +27,8 @@ set -s user-keys[0] "\e[5;30006~"
 set -s user-keys[1] "\e[5;30007~"
 
 set-option -g set-titles on
-set-option -g set-titles-string "#S / #W / #T"
+#set-option -g set-titles-string "#S / #W / #T"
+set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name, active(or not)
 
 set -s user-keys[2] "\e[5;30009~" # key: Subtract, mods: Control | Alt
 bind-key -n User2  resize-pane -U 3
@@ -59,7 +60,7 @@ bind-key -n User9  command-prompt -p "join-pane (right - horiz split)" "join-pan
 
 set -s user-keys[10] "\e[5;30019~" # C-S-y
 bind-key -n User10 command-prompt -p "join-pane (left - horiz split)" "join-pane -bh %%"
-
+bind-key ` run-shell '~/dotfiles/pspane.sh #{pane_id} #{pane_pid}'
 bind-key Enter copy-mode
 bind-key X confirm-before kill-session
 bind-key x kill-pane
@@ -228,7 +229,8 @@ setw -g window-status-bell-style bold,fg=colour255,bg=colour1
 
 set -g message-style bold,fg=colour232,bg=colour166
 set -g pane-border-style fg=colour238
-set -g pane-active-border-style fg=brightred
+set -g pane-active-border-style fg=colour154
 
-set-option -g set-titles-string "#W: #T"
+#set-option -g set-titles-string "#W: #T"
 # }
+run-shell ~/sidebar-plus/sidebar-plus.tmux
