tmux: single tmux.conf for remote and local

--- a/tmux.conf
+++ b/tmux.conf
@@ -59,7 +59,7 @@ bind-key -n User9  command-prompt -p "join-pane (right - horiz split)" "join-pan
 
 set -s user-keys[10] "\e[5;30019~" # C-S-y
 bind-key -n User10 command-prompt -p "join-pane (left - horiz split)" "join-pane -bh %%"
-
+bind-key ` run-shell '~/dotfiles/pspane.sh #{pane_id} #{pane_pid}'
 bind-key Enter copy-mode
 bind-key X confirm-before kill-session
 bind-key x kill-pane
