--- a/tmux.conf
+++ b/tmux.conf
@@ -62,6 +62,7 @@ bind-key -n User10 command-prompt -p "join-pane (left - horiz split)" "join-pane
 
 bind-key ` run-shell '~/dotfiles/pspane.sh #{pane_id} #{pane_pid}'
 bind-key v splitw -p 30 -h "python ~/dotfiles/vimmux/vimmux.py"
+bind-key m run-shell '~/dotfiles/vimmux/movefile.sh #{pane_id}'
 
 bind-key Enter copy-mode
 bind-key X confirm-before kill-session
