--- a/tmux.conf
+++ b/tmux.conf
@@ -60,7 +60,7 @@ bind-key -n User9  command-prompt -p "join-pane (right - horiz split)" "join-pan
 set -s user-keys[10] "\e[5;30019~" # C-S-y
 bind-key -n User10 command-prompt -p "join-pane (left - horiz split)" "join-pane -bh %%"
 
-bind-key ` run-shell '~/dotfiles/pspane.sh #{pane_id} #{pane_pid}'
+bind-key ` run-shell '~/dotfiles/pspane/pspane.sh #{pane_id} #{pane_pid}'
 bind-key v splitw -p 30 -h "python ~/dotfiles/vimmux/vimmux.py"
 bind-key m run-shell '~/dotfiles/vimmux/movefile.sh #{pane_id}'
 
