vim: introduce vim-gitgutter

--- a/tmux.conf
+++ b/tmux.conf
@@ -20,6 +20,9 @@ run-shell ~/.files/tmux/tmux-resurrect/resurrect.tmux
 unbind-key MouseDown2Pane
 bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
 
+#enable force update for vim when tmux get focus
+set -g focus-events on
+
 # https://github.com/neovim/neovim/pull/3165 workaround for cursor shape:
 set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
