tmux: add plugin manager support

--- a/tmux_impl.conf
+++ b/tmux_impl.conf
@@ -238,5 +238,19 @@ set -g message-style bold,fg=colour232,bg=colour166
 set -g pane-border-style fg=colour238
 set -g pane-active-border-style fg=brightred
 
+set -g @1password-copy-to-clipboard 'off'
+set -g @1password-subdomain 'cloudendure'
+set -g @1password-vault ''
 set-option -g set-titles-string "#W: #T"
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'yardnsm/tmux-1password'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+run -b '~/dotfiles/tmux/tpm/tpm'
 # }
