tmux: nested tmux full screen mode

--- a/tmux_impl.conf
+++ b/tmux_impl.conf
@@ -11,6 +11,17 @@ setw -g mode-keys vi
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -ga terminal-overrides ",rxvt-unicode-256color:Tc"
 
+set -g focus-events on
+#switch to full screen mode (per pane mode)
+bind-key F2 'run "~/dotfiles/tmux/toggle_full_screen.sh #{pane_id} toggle"'
+#hook for test-hide border (fill screen mode)
+set-hook -g pane-focus-in 'run "~/dotfiles/tmux/toggle_full_screen.sh #{pane_id}"'
+
+#set-hook -g pane-focus-in 'set pane-border-status bottom'
+#set-hook -g client-attached 'run-shell "~/.tmux/scripts/resize-adaptable.sh -p 50 -l main-vertical"'
+#set-hook -g pane-focus-in "run 'echo I #{pane_id} $(date) >>/tmp/focus'"
+#set-hook -g pane-focus-out "run 'echo O #{pane_id} $(date) >>/tmp/focus'"
+
 set -g update-environment "DISPLAY XAUTHORITY SSH_AUTH_SOCK"
 set -g window-size smallest
 
@@ -27,6 +38,8 @@ set -g focus-events on
 set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 set -s user-keys[0] "\e[5;30006~"
+bind-key -n User0 run "echo yaron"
+
 set -s user-keys[1] "\e[5;30007~"
 
 set-option -g set-titles on
@@ -83,7 +96,6 @@ bind-key -n M-\; last-pane
 
 #bind-key M-- send-keys M--
 #bind-key M-\ send-keys -l "\e\\"
-#bind-key -n M-- split-window -v -c '#{pane_current_path}'
 #bind-key -n M-\ split-window -h -c '#{pane_current_path}'
 
 set -s user-keys[11] "\e[5;30020~" # C-A--
