--- a/tmux_impl.conf
+++ b/tmux_impl.conf
@@ -79,6 +79,7 @@ bind-key -n User10 command-prompt -p "join-pane (left - horiz split)" "join-pane
 bind-key ` run-shell '~/dotfiles/pspane/pspane.sh #{pane_id} #{pane_pid}'
 bind-key v splitw -p 30 -h "python ~/dotfiles/vimmux/vimmux.py"
 bind-key m run-shell '~/dotfiles/vimmux/movefile.sh #{pane_id}'
+bind-key o run-shell '~/dotfiles/vimmux/ipython-show-tb.sh #{pane_id}'
 bind-key h splitw -h 'htop'
 
 bind-key Enter copy-mode
