--- a/tmux_impl.conf
+++ b/tmux_impl.conf
@@ -77,7 +77,7 @@ set -s user-keys[10] "\e[5;30019~" # C-S-y
 bind-key -n User10 command-prompt -p "join-pane (left - horiz split)" "join-pane -bh %%"
 
 bind-key ` run-shell '~/dotfiles/pspane/pspane.sh #{pane_id} #{pane_pid}'
-bind-key v splitw -p 30 -h "pyenv activate nvim && python ~/dotfiles/vimmux/vimmux.py"
+bind-key v splitw -p 30 -h "bash -ic 'source ~/.bashrc && pyenv activate nvim && python ~/dotfiles/vimmux/vimmux.py'"
 bind-key m run-shell '~/dotfiles/vimmux/movefile.sh #{pane_id}'
 bind-key o run-shell '~/dotfiles/vimmux/ipython-show-tb.sh #{pane_id}'
 bind-key h splitw -h 'htop'
