--- a/tmux_impl.conf
+++ b/tmux_impl.conf
@@ -265,5 +265,5 @@ set -g @plugin 'yardnsm/tmux-1password'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
-run -b '~/dotfiles/tmux/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
 # }
