--- a/tmux_impl.conf
+++ b/tmux_impl.conf
@@ -208,7 +208,8 @@ set-option -g visual-activity off
 set-option -g visual-bell off
 set-option -g visual-silence off
 set-window-option -g monitor-activity off
-set-option -g bell-action none
+set-option -g bell-action any
+set-option -g monitor-bell on
 
 set -g default-terminal "screen-256color"
 
