new tmux pane guardian
* tmux pane guardian that sends notification when a task is finished in
  a pane. to use it run the task and than pres C-b g. This will open guardian
  that will send bell to the windows once the task ends.
  so, if you switch to another windows, the original windows tab will be
  painted in red

--- a/tmux_impl.conf
+++ b/tmux_impl.conf
@@ -78,6 +78,7 @@ bind-key -n User10 command-prompt -p "join-pane (left - horiz split)" "join-pane
 
 bind-key ` run-shell '~/dotfiles/pspane/pspane.sh #{pane_id} #{pane_pid}'
 bind-key v display-popup -E "bash -ic 'pyenv activate nvim >/dev/null 2>&1 && exec python ~/dotfiles/vimmux/vimmux.py'"
+bind-key g run-shell '~/dotfiles/guard/guardwrap.bash #{pane_id} #{pane_pid}'
 bind-key m run-shell '~/dotfiles/vimmux/movefile.sh #{pane_id}'
 bind-key o run-shell '~/dotfiles/vimmux/ipython-show-tb.sh #{pane_id}'
 bind-key h splitw -h 'htop'
