--- a/tmux_impl.conf
+++ b/tmux_impl.conf
@@ -22,6 +22,13 @@ set-hook -g pane-focus-in 'run "~/dotfiles/tmux/toggle_full_screen.sh #{pane_id}
 #set-hook -g pane-focus-in "run 'echo I #{pane_id} $(date) >>/tmp/focus'"
 #set-hook -g pane-focus-out "run 'echo O #{pane_id} $(date) >>/tmp/focus'"
 
+#session mononitor, creation and deletion
+# set-hook -g session-created[0] "run-shell -d 1 'exec ~/dotfiles/tmux/sess_mon.bash #{session_name}'"
+
+set -g popup-style bg=black,fg=yellow,fill=black
+set -g popup-border-style bg=black,fill=black
+set -g popup-border-lines rounded
+
 set -g update-environment "DISPLAY XAUTHORITY SSH_AUTH_SOCK"
 set -g window-size smallest
 
