new vim maven syntax highlight plugin

--- a/tmux_impl.conf
+++ b/tmux_impl.conf
@@ -28,7 +28,6 @@ set-hook -g pane-focus-in 'run "~/dotfiles/tmux/toggle_full_screen.sh #{pane_id}
 set -g popup-style bg=black,fg=yellow,fill=black
 set -g popup-border-style bg=black,fill=black
 set -g popup-border-lines rounded
-
 set -g update-environment "DISPLAY XAUTHORITY SSH_AUTH_SOCK"
 set -g window-size smallest
 
@@ -187,6 +186,7 @@ bind-key -n User13 send-keys "\e[5;30014~"
 set -g pane-border-status bottom
 set -g pane-border-format "#[fg=#00ffff,bg=#003333,bold]#T"
 set -g pane-border-format "#[fg=#00ffff,bold]#T"
+set -g pane-border-style fg=red,bg=black,fill=black
 
 ## Design from http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux.conf/
 
