first step toward full lsp

--- a/tmux_impl.conf
+++ b/tmux_impl.conf
@@ -184,8 +184,8 @@ bind-key -Tcopy-mode-vi User13 send-keys -X begin-selection
 bind-key -n User13 send-keys "\e[5;30014~"
 
 set -g pane-border-status bottom
-set -g pane-border-format "#[fg=#00ffff,bg=#003333,bold]#T"
-set -g pane-border-format "#[fg=#00ffff,bold]#T"
+set -g pane-border-format "#P #[fg=#00ffff,bg=#003333,bold]#T"
+set -g pane-border-format "#P #[fg=#00ffff,bold]#T"
 set -g pane-border-style fg=red,bg=black,fill=black
 
 ## Design from http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux.conf/
@@ -239,7 +239,7 @@ set -g status-bg colour234
 set -g status-fg colour137
 set -g status-style dim
 set -g status-left '#h:#S '
-set -g status-right '#[fg=colour233,bg=colour241,bold] %a %d.%m.%Y #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right '#P #[fg=colour233,bg=colour241,bold] %a %d.%m.%Y #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 
