--- a/tmux_impl.conf
+++ b/tmux_impl.conf
@@ -8,6 +8,8 @@ set-option -g history-limit 200000
 set -g mouse on
 setw -g mode-keys vi
 
+bind -n C-l "send-keys C-l ; run 'sleep 0.1' ; clear-history"
+
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -ga terminal-overrides ",rxvt-unicode-256color:Tc"
 
