--- a/tmux_impl.conf
+++ b/tmux_impl.conf
@@ -109,6 +109,7 @@ bind-key -n M-\; last-pane
 #bind-key -n M-\ split-window -h -c '#{pane_current_path}'
 
 set -s user-keys[11] "\e[5;30020~" # C-A--
+set -s user-keys[11] "\u001B[5;30020~" # C-A--
 set -s user-keys[12] "\e[5;30021~" # C-A-/
 bind-key -n User11 split-window -b -v -c '#{pane_current_path}'
 bind-key -n User12 split-window -b -h -c '#{pane_current_path}'
@@ -188,7 +189,9 @@ bind-key -n User13 send-keys "\e[5;30014~"
 set -g pane-border-status bottom
 set -g pane-border-format "#P #[fg=#00ffff,bg=#003333,bold]#T"
 set -g pane-border-format "#P #[fg=#00ffff,bold]#T"
-set -g pane-border-style fg=red,bg=black,fill=black
+
+set -g pane-border-style fg=white
+set -g pane-active-border-style "bg=default fg=magenta"
 
 ## Design from http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux.conf/
 
@@ -202,8 +205,8 @@ set -g window-style bg=black
 ## Status bar design
 # status line
 set -g status-justify left
-set -g status-bg default
-set -g status-fg colour12
+set -g status-bg blue
+set -g status-fg blue
 set -g status-interval 1
 
 
@@ -237,11 +240,11 @@ set-window-option -g mode-style "fg=#000000 bg=#a0d0b0"
 # The statusbar {
 
 set -g status-position bottom
-set -g status-bg colour234
-set -g status-fg colour137
+set -g status-bg black
+set -g status-fg blue
 set -g status-style dim
 set -g status-left '#h:#S '
-set -g status-right '#P #[fg=colour233,bg=colour241,bold] %a %d.%m.%Y #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right '#P #[fg=blue,bg=black,bold] %a %d.%m.%Y #[fg=blue,bg=black,bold]%H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 
@@ -259,7 +262,7 @@ setw -g window-status-bell-style bold,fg=colour255,bg=colour1
 # The messages {
 
 set -g message-style bold,fg=colour232,bg=colour166
-set -g pane-border-style fg=colour238
+# set -g pane-border-style fg=colour238
 set -g pane-active-border-style fg=brightred
 
 set -g @1password-copy-to-clipboard 'off'
