fix tmux toml configuration file

--- a/tmux_impl.conf
+++ b/tmux_impl.conf
@@ -110,7 +110,7 @@ bind-key -n M-\; last-pane
 
 set -s user-keys[11] "\e[5;30020~" # C-A--
 set -s user-keys[11] "\u001B[5;30020~" # C-A--
-set -s user-keys[12] "\e[5;30021~" # C-A-/
+set -s user-keys[12] "\e[5;30021~" # C-A-\
 bind-key -n User11 split-window -b -v -c '#{pane_current_path}'
 bind-key -n User12 split-window -b -h -c '#{pane_current_path}'
 
