--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -4,6 +4,9 @@
 [colors]
 draw_bold_text_with_bright_colors = true
 
+[terminal]
+osc52 = "CopyPaste"
+
 [colors.bright]
 black = "0x686868"
 blue = "0x7aa6da"
@@ -191,7 +194,7 @@ key = "Delete"
 mods = "Control"
 
 [[keyboard.bindings]]
-action = "PasteSelection"
+action = "Paste"
 key = "Insert"
 mods = "Shift"
 
