--- a/tmux_impl.conf
+++ b/tmux_impl.conf
@@ -37,7 +37,7 @@ set -g @resurrect-capture-pane-contents 'on'
 run-shell ~/.files/tmux/tmux-resurrect/resurrect.tmux
 
 unbind-key MouseDown2Pane
-bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+bind-key -n MouseDown2Pane run "tmux save-buffer - | ~/dotfiles/tmux/yank.bash"
 
 #enable force update for vim when tmux get focus
 set -g focus-events on
@@ -49,6 +49,9 @@ set -s user-keys[0] "\e[5;30006~"
 bind-key -n User0 run "echo yaron"
 
 set -s user-keys[1] "\e[5;30007~"
+
+# set clipboard on, means that clipboard will be passed vi osc52 standard, and the terminal should be configured and support that option.
+set -s set-clipboard on
 
 set-option -g set-titles on
 set-option -g set-titles-string "#S / #W / #T"
@@ -177,8 +180,10 @@ bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
 
 unbind -n -Tcopy-mode MouseDragEnd1Pane
 
-bind-key -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel primary > /dev/null; tmux save-buffer - | xclip -i -sel clipboard > /dev/null;"
-bind-key -Tcopy-mode-vi Enter send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel primary > /dev/null; tmux save-buffer - | xclip -i -sel clipboard > /dev/null;"
+set-window-option -g allow-passthrough on
+
+bind-key -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "tmux save-buffer - | ~/dotfiles/tmux/yank.bash > #{pane_tty};"
+bind-key -Tcopy-mode-vi Enter send -X copy-pipe "tmux save-buffer - | ~/dotfiles/tmux/yank.bash > #{pane_tty};"
 bind-key -Tcopy-mode-vi Home send-keys -X start-of-line
 bind-key -Tcopy-mode-vi End  send-keys -X end-of-line
 
