--- a/nvidia/clangd-conf.yaml
+++ b/nvidia/clangd-conf.yaml
@@ -3,8 +3,8 @@ CompileFlags:
 
 Diagnostics:
   ClangTidy:
-    Add: [ '*', 'readability-identifier-naming']
     Remove:
+      - bugprone-reserved-identifier
       - google-readability*
       - altera*
       - readability-identifier-length
@@ -14,20 +14,65 @@ Diagnostics:
       - modernize-macro-to-enum
       - cppcoreguidelines-macro-to-enum
       - cppcoreguidelines-init-variables
-      - altera*
       - hicpp*
-      - bugprone-reserved-identifier
       - performance-no*
       - llvmlibc-restrict-system-libc-headers
       - bugprone-assignment-in-if-condition
       - cppcoreguidelines-avoid-non-const-global-variables
       - bugprone-easily-swappable-parameters
-      - bugprone-reserved-identifier
+      - bugprone-casting-through-void
+      - bugprone-inc-dec-in-conditions
+      - bugprone-unused-return-value
+      - llvm-include-order
+      - misc-no-recursion
+    Add:
+      - readability-identifier-naming
+      - bugprone-assert-side-effect
+      - bugprone-incorrect-roundings
+      - bugprone-infinite-loop
+      - bugprone-integer-division
+      - bugprone-macro-repeated-side-effects
+      - bugprone-misplaced-operator-in-strlen-in-alloc
+      - bugprone-misplaced-pointer-arithmetic-in-alloc
+      - bugprone-misplaced-widening-cast
+      - bugprone-multi-level-implicit-pointer-conversion
+      - bugprone-multiple-statement-macro
+      - bugprone-no-escape
+      - bugprone-non-zero-enum-to-bool-conversion
+      - bugprone-not-null-terminated-result
+      - bugprone-posix-return
+      - bugprone-redundant-branch-condition
+      - bugprone-signal-handler
+      - bugprone-signed-char-misuse
+      - bugprone-sizeof-expression
+      - bugprone-spuriously-wake-up-functions
+      - bugprone-suspicious*
+      - bugprone-swapped-arguments
+      - bugprone-switch-missing-default-case
+      - bugprone-tagged-union-member-count
+      - bugprone-terminating-continue
+      - bugprone-too-small-loop-variable
+      - llvmlibc*
+      - misc*
+      - performance*
+      - readability-const-return-type
+      - readability-duplicate-include
+      - readability-else-after-return
+      - readability-non-const-parameter
+      - readability-misleading*
+      - readability-redundant*
+
+
+
     CheckOptions:
       readability-identifier-naming.FunctionCase: lower_case
+      readability-identifier-naming.FunctionIgnoredRegexp: "^_.*"
       readability-identifier-naming.VariableCase: lower_case
+      readability-identifier-naming.VariableIgnoredRegexp: "^_.*"
       readability-identifier-naming.EnumCase: lower_case
       readability-identifier-naming.EnumConstantCase: UPPER_CASE
       readability-identifier-naming.MacroDefinitionCase: UPPER_CASE
+      readability-identifier-naming.MacroDefinitionIgnoredRegexp: "^_.*"
       readability-identifier-naming.StructCase: aNy_CasE
+      readability-identifier-naming.StructIgnoredRegexp: "^_.*"
 
