--- a/tmux_impl.conf
+++ b/tmux_impl.conf
@@ -1,6 +1,7 @@
 #tested on tmux 3.1 next
 set-option -g prefix C-b
 
+set -g mouse on
 set -g base-index 1
 set -sg escape-time 0
 set-option -g mouse on
@@ -38,6 +39,7 @@ run-shell ~/.files/tmux/tmux-resurrect/resurrect.tmux
 
 unbind-key MouseDown2Pane
 bind-key -n MouseDown2Pane run "tmux save-buffer - | ~/dotfiles/tmux/yank.bash"
+bind-key -n MouseDown3Pane run-shell "~/dotfiles/right-click-menu.sh"
 
 #enable force update for vim when tmux get focus
 set -g focus-events on
