add install dotbot conf file

--- a/nvidia/nvmeshum_simulator.conf
+++ b/nvidia/nvmeshum_simulator.conf
@@ -4,7 +4,7 @@ seed=1
 run_ec_ut=1
 
 ## default config - run all tests
-white_list=*
+white_list="std_memmgr"
 black_list="ec"
 
 ## example for running one test
