--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,6 +1,9 @@
 # "debug.render_timer" = false
 # tabspaces = 8
 
+[general]
+live_config_reload = true
+
 [colors]
 draw_bold_text_with_bright_colors = true
 
@@ -602,7 +605,7 @@ mouse = "Middle"
 [selection]
 semantic_escape_chars = ",│`|:\"' ()[]{}<>"
 
-[shell]
+[terminal.shell]
 program = "/bin/bash"
 
 # [small_font]
