--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -44,6 +44,7 @@
     - ~/Downloads
     - ~/.config/atuin
     - ~/.config/clangd
+    - ~/dotfiles/bin
 
 - shell:
   - [ git submodule update --init --recursive, Installing submodules]
