--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -44,7 +44,7 @@
     - ~/Downloads
     - ~/.config/atuin
     - ~/.config/clangd
-    - ~/dotfiles/bin
+    - ~/dotfiles/build
     - ~/.config/nvm
 
 - shell:
