--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -61,3 +61,4 @@
   - [\. "$HOME/.config/nvm/nvm.sh" && nvm install 22, install nodejs]
   - [install_me/install_tmux2.sh, installing tmux]
   - [install_me/install_neovim2.sh, install neovim]
+  - [./install_bat.sh, install bat]
