markdown better rendering in nvim

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -46,6 +46,7 @@
     - ~/.config/clangd
     - ~/dotfiles/build
     - ~/.config/nvm
+    - ~/bat
 
 - shell:
   - [ git submodule update --init --recursive, Installing submodules]
