--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,54 @@
-Arpeggio==2.0.2
-astroid==3.0.2
-asttokens==2.4.1
-cmake==3.28.1
-confluent-kafka==2.3.0
-curses-menu==0.8.1
-curses-util==0.0.25
-decorator==5.1.1
-Deprecated==1.2.14
-dill==0.3.8
-docstring-to-markdown==0.15
-executing==2.0.1
-flake8==7.0.0
-gdb-tools==1.5
-glibc==0.6.1
-greenlet==3.0.3
-ipython==8.22.1
-isort==5.13.2
-jedi==0.17.2
-matplotlib-inline==0.1.6
-mccabe==0.7.0
-msgpack==1.0.7
-mypy==1.8.0
-mypy-extensions==1.0.0
-neovim-remote==2.5.1
-numpy==1.26.4
-pandas==2.2.1
-parso==0.7.1
-pexpect==4.9.0
-platformdirs==4.2.0
-pluggy==1.5.0
-prompt-toolkit==3.0.43
-psutil==7.0.0
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pycodestyle==2.11.1
-pyflakes==3.2.0
-Pygments==2.17.2
-pylint==3.0.3
-pynvim==0.5.0
-python-dateutil==2.8.2
-python-jsonrpc-server==0.4.0
-python-lsp-jsonrpc==1.1.2
-pytz==2024.1
-ripgrepy==2.0.0
-six==1.16.0
-stack-data==0.6.3
-tomlkit==0.12.3
-traitlets==5.14.1
-typing_extensions==4.9.0
-tzdata==2024.1
-ujson==5.10.0
-wcwidth==0.2.13
-wrapt==1.16.0
+Arpeggio
+astroid
+asttokens
+cmake
+confluent-kafka
+curses-menu
+curses-util
+decorator
+Deprecated
+dill
+docstring-to-markdown
+executing
+flake8
+gdb-tools
+glibc
+greenlet
+ipython
+isort
+jedi
+matplotlib-inline
+mccabe
+msgpack
+mypy
+mypy-extensions
+neovim-remote
+numpy
+pandas
+parso
+pexpect
+platformdirs
+pluggy
+prompt-toolkit
+psutil
+ptyprocess
+pure-eval
+pycodestyle
+pyflakes
+Pygments
+pylint
+pynvim
+python-dateutil
+python-jsonrpc-server
+python-lsp-jsonrpc
+pytz
+ripgrepy
+six
+stack-data
+tomlkit
+traitlets
+typing_extensions
+tzdata
+ujson
+wcwidth
+wrapt
