--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -63,3 +63,4 @@
   - [install_me/install_tmux2.sh, installing tmux]
   - [install_me/install_neovim2.sh, install neovim]
   - [./install_bat.sh, install bat]
+  - [cargo install --locked --root ~/dotfiles/build git-delta, install git-delta]
