update python requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,60 @@
-Arpeggio
-astroid
-asttokens
-cmake
-confluent-kafka
-curses-menu
-curses-util
-decorator
-Deprecated
-dill
-docstring-to-markdown
-executing
-flake8
-gdb-tools
-glibc
-greenlet
-ipython
-isort
-jedi
-matplotlib-inline
-mccabe
-msgpack
-mypy
-mypy-extensions
-neovim-remote
-numpy
-pandas
-parso
-pexpect
-platformdirs
-pluggy
-prompt-toolkit
-psutil
-ptyprocess
-pure-eval
-pycodestyle
-pyflakes
-Pygments
-pylint
-pynvim
-python-dateutil
-python-jsonrpc-server
-python-lsp-jsonrpc
-pytz
-ripgrepy
-six
-stack-data
-tomlkit
-traitlets
-typing_extensions
-tzdata
-ujson
-wcwidth
-wrapt
+Arpeggio==2.0.2
+astroid==3.3.10
+asttokens==3.0.0
+cmake==4.0.2
+confluent-kafka==2.10.0
+curses-menu==0.9.0
+curses-util==0.0.25
+decorator==5.1.1
+Deprecated==1.2.18
+dill==0.4.0
+docstring-to-markdown==0.17
+executing==2.0.1
+flake8==7.2.0
+gdb-tools==1.5
+gevent==24.11.1
+glibc==0.6.1
+greenlet==3.2.2
+importlib_metadata==8.7.0
+ipython==9.2.0
+ipython_pygments_lexers==1.1.1
+isort==6.0.1
+jedi==0.19.2
+matplotlib-inline==0.1.6
+mccabe==0.7.0
+msgpack==1.1.0
+mypy==1.15.0
+mypy_extensions==1.1.0
+neovim-remote==2.5.1
+numpy==2.2.5
+pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
+platformdirs==4.3.8
+pluggy==1.6.0
+prompt_toolkit==3.0.51
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pycodestyle==2.13.0
+pyflakes==3.3.2
+Pygments==2.19.1
+pylint==3.3.7
+pynvim==0.5.2
+python-dateutil==2.9.0.post0
+python-jsonrpc-server==0.4.0
+python-lsp-jsonrpc==1.1.2
+pytz==2025.2
+ripgrepy==2.1.0
+six==1.17.0
+stack-data==0.6.3
+tomlkit==0.13.2
+traitlets==5.14.3
+typing_extensions==4.13.2
+tzdata==2025.2
+ujson==5.10.0
+wcwidth==0.2.13
+wrapt==1.17.2
+zipp==3.21.0
+zope.event==5.0
+zope.interface==7.2
