--- a/tmux_impl.conf
+++ b/tmux_impl.conf
@@ -11,8 +11,9 @@ setw -g mode-keys vi
 
 bind -n C-l "send-keys C-l ; run 'sleep 0.1' ; clear-history"
 
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-set-option -ga terminal-overrides ",rxvt-unicode-256color:Tc"
+#set-option -ga terminal-overrides ",xterm-256color:Tc"
+#set-option -ga terminal-overrides ",rxvt-unicode-256color:Tc"
+set-option -ag terminal-overrides ",xterm-256color:Ms=\\E]52;c;%p2%s\\7"
 
 set -g focus-events on
 #switch to full screen mode (per pane mode)
@@ -184,7 +185,7 @@ unbind -n -Tcopy-mode MouseDragEnd1Pane
 
 set-window-option -g allow-passthrough on
 
-bind-key -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "tmux save-buffer - | ~/dotfiles/tmux/yank.bash > #{pane_tty};"
+bind-key -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "tmux save-buffer - | ~/dotfiles/tmux_stuff/yank.bash > #{pane_tty};"
 bind-key -Tcopy-mode-vi Enter send -X copy-pipe "tmux save-buffer - | ~/dotfiles/tmux/yank.bash > #{pane_tty};"
 bind-key -Tcopy-mode-vi Home send-keys -X start-of-line
 bind-key -Tcopy-mode-vi End  send-keys -X end-of-line
