--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -17,7 +17,7 @@
     ~/.gitconfig: nvidia/gitconfig
 
     #terminal
-    ~/.config/alacritty: alacritty
+    ~/.config/alacritty: alacritty_conf
 
     #fzf
     ~/.fzf: fzf
@@ -51,7 +51,7 @@
 - shell:
   - [ git submodule update --init --recursive, Installing submodules]
   - [ install_me/install_ubuntu_packages.sh install_me/packages_ubuntu.txt, verify that all prereq installed (on error run this command as root) ]
-  - [ test -f ~/.tmux.conf || cp ~/dotfiles/tmux_impl.conf ~/.tmux.conf, setting tmux local conf]
+  - [ test -f ~/.tmux.conf || cp ~/dotfiles/tmux.conf ~/.tmux.conf, setting tmux local conf]
   - [cp atuin/* ~/.config/atuin/, force update atuin conf]
   - [curl --proto '=https' --tlsv1.2 -LsSf https://setup.atuin.sh | sh, install atuin]
   - [~/.fzf/install, install fzf]
