tmux fix some issues related to copy paste

--- a/tmux_impl.conf
+++ b/tmux_impl.conf
@@ -13,7 +13,8 @@ bind -n C-l "send-keys C-l ; run 'sleep 0.1' ; clear-history"
 
 #set-option -ga terminal-overrides ",xterm-256color:Tc"
 #set-option -ga terminal-overrides ",rxvt-unicode-256color:Tc"
-set-option -ag terminal-overrides ",xterm-256color:Ms=\\E]52;c;%p2%s\\7"
+#set-option -ag terminal-overrides ",xterm-256color:Ms=\\E]52;c;%p2%s\\7"
+set-option -ag terminal-overrides ",screen-256color:clipboard"
 
 set -g focus-events on
 #switch to full screen mode (per pane mode)
@@ -35,8 +36,8 @@ set -g popup-border-lines rounded
 set -g update-environment "DISPLAY XAUTHORITY SSH_AUTH_SOCK"
 set -g window-size smallest
 
-set -g @resurrect-capture-pane-contents 'on'
-run-shell ~/.files/tmux/tmux-resurrect/resurrect.tmux
+#set -g @resurrect-capture-pane-contents 'on'
+#run-shell ~/.files/tmux/tmux-resurrect/resurrect.tmux
 
 unbind-key MouseDown2Pane
 bind-key -n MouseDown2Pane run "tmux save-buffer - | ~/dotfiles/tmux/yank.bash"
@@ -54,7 +55,7 @@ bind-key -n User0 run "echo yaron"
 set -s user-keys[1] "\e[5;30007~"
 
 # set clipboard on, means that clipboard will be passed vi osc52 standard, and the terminal should be configured and support that option.
-set -s set-clipboard on
+set -g set-clipboard external
 
 set-option -g set-titles on
 set-option -g set-titles-string "#S / #W / #T"
@@ -183,9 +184,9 @@ bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
 
 unbind -n -Tcopy-mode MouseDragEnd1Pane
 
-set-window-option -g allow-passthrough on
+set -g allow-passthrough on
 
-bind-key -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "tmux save-buffer - | ~/dotfiles/tmux_stuff/yank.bash > #{pane_tty};"
+bind-key -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "tmux save-buffer - | ~/dotfiles/tmux_stuff/yank.bash > #{pane_tty}"
 bind-key -Tcopy-mode-vi Enter send -X copy-pipe "tmux save-buffer - | ~/dotfiles/tmux/yank.bash > #{pane_tty};"
 bind-key -Tcopy-mode-vi Home send-keys -X start-of-line
 bind-key -Tcopy-mode-vi End  send-keys -X end-of-line
