--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -62,4 +62,5 @@
   - [install_me/install_neovim2.sh, install neovim]
   - [./install_bat.sh, install bat]
   - [cargo install --locked --root ~/dotfiles/build git-delta, install git-delta]
+  - [cargo install --locked --root ~/dotfiles/build alacritty, install alacritty]
   - [cargo install --locked --root ~/dotfiles/build pylyzer, install pylyzer]
