support zorin-os

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -53,21 +53,20 @@
 
 - shell:
   - [ git submodule update --init --recursive, Installing submodules]
-  - [ install_me/install_ubuntu_packages.sh install_me/packages_ubuntu.txt, verify that all prereq installed (on error run this command as root) ]
+  - [install_me/install_ubuntu_packages.sh install_me/packages_ubuntu.txt, verify that all prereq installed (on error run this command as root) ]
   - [ test -f ~/.tmux.conf || cp ~/dotfiles/tmux.conf ~/.tmux.conf, setting tmux local conf]
-  - [cp atuin/* ~/.config/atuin/, force update atuin conf]
+  - [mkdir -p ~/.config/atuin && cp atuin/* ~/.config/atuin/, force update atuin conf]
   - [curl --proto '=https' --tlsv1.2 -LsSf https://setup.atuin.sh | sh, install atuin]
-  - [~/.fzf/install, install fzf]
+  - [yes | ~/.fzf/install, install fzf]
   - [~/dotfiles/update_pyenv_nvim.sh 3.13.2, update and install nvim environment]
   - [curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.2/install.sh | NVM_DIR="$HOME/.config/nvm" bash, Install nvm]
   - [\. "$HOME/.config/nvm/nvm.sh" && nvm install 22, install nodejs]
   - [install_me/install_tmux2.sh, installing tmux]
   - [install_me/install_neovim2.sh, install neovim]
-  - [./install_bat.sh, install bat]
   - [ curl https://sh.rustup.rs -sSf > /tmp/rustup.sh && sh /tmp/rustup.sh -y, install rust]
-  - [cargo install --locked --root ~/dotfiles/build git-delta, install git-delta]
-  - [cargo install --locked --root ~/dotfiles/build alacritty, install alacritty]
+  - [./install_bat.sh, install bat]
+  - [ ~/.cargo/bin/cargo install --locked --root ~/dotfiles/build git-delta, install git-delta]
+  - [ ~/.cargo/bin/cargo install --locked --root ~/dotfiles/build alacritty, install alacritty]
   - [fc-cache ~/.fonts/, update cache with fonts]
-  - [cargo install --locked --root ~/dotfiles/build pylyzer, install pylyzer]
-  - [npm i -g bash-language-server, install bash-language-server]
-  - [npm install -g dockerfile-language-server-nodejs, install dockerfile-language-server-nodejs]
+  - [\. "$HOME/.config/nvm/nvm.sh" && npm i -g bash-language-server, install bash-language-server]
+  - [\. "$HOME/.config/nvm/nvm.sh" && npm install -g dockerfile-language-server-nodejs, install dockerfile-language-server-nodejs]
