--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -68,7 +68,8 @@
   - [./install_bat.sh, install bat]
   - [ ~/.cargo/bin/cargo install --locked --root ~/dotfiles/build git-delta, install git-delta]
   - [ ~/.cargo/bin/cargo install --locked --root ~/dotfiles/build alacritty, install alacritty]
-  - [fc-cache ~/.fonts/, update cache with fonts]
+  - [install_me/install_nerd_fonts.sh, install nerd fonts]
+  - [fc-cache -fv ~/.fonts/, update cache with fonts]
   - [\. "$HOME/.config/nvm/nvm.sh" && npm i -g bash-language-server, install bash-language-server]
   - [\. "$HOME/.config/nvm/nvm.sh" && npm install -g dockerfile-language-server-nodejs, install dockerfile-language-server-nodejs]
   - [tldr --update, update tldr]
